methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:1: error: not found: value False
def haveBaggle():Boolean = {var b:Bool = False;
                                         ^MethodsReturning:1: error: type mismatch;
 found   : Unit
 required: Boolean
def haveBaggle():Boolean = {var b:Bool = False;
                           ^