methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {var b:Bool = False;
}